[package]
name = "warp-backend"
version = "0.1.0"
authors = ["kumarmo2 <kr.mohit6794@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.21", features = ["rt-threaded", "macros", "fs"]}
warp = "0.2.3"

react-ssr = { git = "https://github.com/kumarmo2/react-ssr.git", branch = "master"}